[gd_scene load_steps=3 format=3 uid="uid://8e5xqj23wqm8"]

[ext_resource type="Script" path="res://Cenas/ui.gd" id="1_5vrpu"]
[ext_resource type="FontFile" uid="uid://ch103gi2tob72" path="res://Assets Space Invaders/Assets Space Invades/font/andina.ttf" id="1_ocjlh"]

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_5vrpu")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="PointsLabel" type="Label" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_fonts/font = ExtResource("1_ocjlh")
theme_override_font_sizes/font_size = 30
text = "SCORE = 0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LifesContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0

[node name="GameOverContainer" type="CenterContainer" parent="MarginContainer"]
visible = false
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/GameOverContainer"]
layout_mode = 2

[node name="GameOverLabel" type="Label" parent="MarginContainer/GameOverContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.74902, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_ocjlh")
theme_override_font_sizes/font_size = 100
text = "GAME OVER"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GameOverButton" type="Button" parent="MarginContainer/GameOverContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0, 0.615686, 0.796078, 1)
theme_override_fonts/font = ExtResource("1_ocjlh")
theme_override_font_sizes/font_size = 30
text = "RESTART"

[connection signal="pressed" from="MarginContainer/GameOverContainer/VBoxContainer/GameOverButton" to="." method="_on_game_over_button_pressed"]
